--- a/gesture_swipe_tap_intro/gesture_swipe_tap_intro/Base.lproj/Main.storyboard
+++ b/gesture_swipe_tap_intro/gesture_swipe_tap_intro/Base.lproj/Main.storyboard
@@ -18,10 +18,17 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="hello world" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fAx-6h-CLu">
-                                <rect key="frame" x="146" y="323" width="83" height="21"/>
+                            <imageView contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="museAlbumCover" translatesAutoresizingMaskIntoConstraints="NO" id="EPL-cu-Cxs">
+                                <rect key="frame" x="67" y="151" width="240" height="145"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <connections>
+                                    <outletCollection property="gestureRecognizers" destination="2Am-04-YTX" appends="YES" id="WEg-hA-hux"/>
+                                </connections>
+                            </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="TAP ME!" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="iGj-KC-Elw">
+                                <rect key="frame" x="108" y="369" width="158" height="48"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" weight="heavy" pointSize="40"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
@@ -31,7 +38,16 @@
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
+                <swipeGestureRecognizer direction="right" id="2Am-04-YTX">
+                    <connections>
+                        <action selector="mySwipeHandler:" destination="BYZ-38-t0r" id="PLG-t8-2Pb"/>
+                    </connections>
+                </swipeGestureRecognizer>
             </objects>
+            <point key="canvasLocation" x="176.80000000000001" y="26.53673163418291"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="museAlbumCover" width="960" height="600"/>
+    </resources>
 </document>
