--- a/gesture_swipe_tap_intro/gesture_swipe_tap_intro/Base.lproj/Main.storyboard
+++ b/gesture_swipe_tap_intro/gesture_swipe_tap_intro/Base.lproj/Main.storyboard
@@ -18,31 +18,61 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="museAlbumCover" translatesAutoresizingMaskIntoConstraints="NO" id="EPL-cu-Cxs">
-                                <rect key="frame" x="67" y="151" width="240" height="145"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <connections>
-                                    <outletCollection property="gestureRecognizers" destination="2Am-04-YTX" appends="YES" id="WEg-hA-hux"/>
-                                </connections>
-                            </imageView>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="TAP ME!" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="iGj-KC-Elw">
-                                <rect key="frame" x="108" y="369" width="158" height="48"/>
+                            <label opaque="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="TAP ME!" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="iGj-KC-Elw">
+                                <rect key="frame" x="108" y="460" width="158" height="48"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" type="system" weight="heavy" pointSize="40"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="PINCH ME!" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="IOt-7w-yJk">
+                                <rect key="frame" x="83" y="309" width="208" height="48"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" weight="heavy" pointSize="40"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="console msg" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="v5A-xO-bKS">
+                                <rect key="frame" x="67" y="577" width="240" height="70"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <imageView contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="museAlbumCover" translatesAutoresizingMaskIntoConstraints="NO" id="EPL-cu-Cxs">
+                                <rect key="frame" x="67" y="92" width="240" height="145"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <connections>
+                                    <outletCollection property="gestureRecognizers" destination="2Am-04-YTX" appends="YES" id="WEg-hA-hux"/>
+                                    <outletCollection property="gestureRecognizers" destination="tig-iQ-FFc" appends="YES" id="D9c-V3-ffP"/>
+                                    <outletCollection property="gestureRecognizers" destination="Xow-7B-Nbc" appends="YES" id="D01-uH-xZP"/>
+                                </connections>
+                            </imageView>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
+                    <connections>
+                        <outlet property="myPinchLabel" destination="IOt-7w-yJk" id="LeU-p0-rqR"/>
+                        <outlet property="myTapLabel" destination="iGj-KC-Elw" id="TmY-GF-jrv"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
-                <swipeGestureRecognizer direction="right" id="2Am-04-YTX">
+                <swipeGestureRecognizer direction="right" id="2Am-04-YTX" userLabel="Swipe Gesture Recognizer(ToRight)">
                     <connections>
                         <action selector="mySwipeToRightHandler:" destination="BYZ-38-t0r" id="PLG-t8-2Pb"/>
                     </connections>
                 </swipeGestureRecognizer>
+                <swipeGestureRecognizer direction="left" id="tig-iQ-FFc" userLabel="Swipe Gesture Recognizer(ToLeft)">
+                    <connections>
+                        <action selector="mySwipeToLeftHandler:" destination="BYZ-38-t0r" id="MVf-MU-bzB"/>
+                    </connections>
+                </swipeGestureRecognizer>
+                <tapGestureRecognizer numberOfTapsRequired="3" id="Xow-7B-Nbc" userLabel="Tap Gesture Recognizer(TripleTappingImage)">
+                    <connections>
+                        <action selector="myTripleTappingImageHandler:" destination="BYZ-38-t0r" id="v6T-91-j5L"/>
+                    </connections>
+                </tapGestureRecognizer>
             </objects>
             <point key="canvasLocation" x="176.80000000000001" y="26.53673163418291"/>
         </scene>
