now it displays consoleLog on 'Label' on Main.Storyboard... I'm happy

--- a/gesture_swipe_tap_intro/gesture_swipe_tap_intro/Base.lproj/Main.storyboard
+++ b/gesture_swipe_tap_intro/gesture_swipe_tap_intro/Base.lproj/Main.storyboard
@@ -32,8 +32,8 @@
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="console msg" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="v5A-xO-bKS">
-                                <rect key="frame" x="67" y="577" width="240" height="70"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="console msg label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="v5A-xO-bKS">
+                                <rect key="frame" x="16" y="577" width="343" height="70"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
@@ -53,6 +53,7 @@
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
                     <connections>
+                        <outlet property="myConsoleMsgLabel" destination="v5A-xO-bKS" id="nf9-MX-jA7"/>
                         <outlet property="myPinchLabel" destination="IOt-7w-yJk" id="LeU-p0-rqR"/>
                         <outlet property="myTapLabel" destination="iGj-KC-Elw" id="TmY-GF-jrv"/>
                     </connections>
